# localflow

./: .gitignore  Cargo.toml  GOAL-MEGAPROMPT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
core/: Cargo.toml
core/examples/: dictate_file.rs
core/src/: asr.rs  audio.rs  cleanup.rs  dictionary.rs  history.rs  inject.rs  lib.rs  llm.rs  models.rs  pipeline.rs  settings.rs  vad.rs
core/tests/: cleanup_suite.rs
docs/: USER-GUIDE.md
scripts/: dev-env.sh  gen-icons.mjs
src/: App.tsx  Pill.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  tray.rs
src/components/: DictionaryPage.tsx  HistoryPage.tsx  ModelsPage.tsx  Onboarding.tsx  ScratchpadPage.tsx  SettingsPage.tsx
src/lib/: api.ts
