[package]
name = "localflow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LocalFlow — fully-local system-wide voice dictation (Wispr Flow style)"

[lib]
name = "localflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
localflow-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"

[features]
default = []
